<resources>
    <string name="app_name">OceanRider</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="spot_page">Spot page</string>
    <string name="list_spots_page">Où surfer aujourd\'hui ?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name">Nom de la plage</string>
    <string name="place">Lieu de la plage</string>
    <string name="save">Save</string>
    <string name="alt">Image de plage</string>
    <string name="spot1">banane</string>
    <string name="spot2">pomme</string>
    <string name="textview">TextView</string>

</resources>