<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/orange">

        <!-- View invisible pour créer de l'espace en haut -->
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amarante"
            android:text="@string/name"
            android:textColor="@color/violet"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textview_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amarante"
            android:text="@string/place"
            android:paddingTop="8dp"
            android:textColor="@color/violet" />

        <TextView
            android:id="@+id/textview_surfbreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amarante"
            android:text="TextView"
            android:paddingTop="8dp"
            android:textColor="@color/violet" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="360dp"
            android:layout_height="327dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/alt"
            android:src="@drawable/sunrise_5084755_1280" />

        <TextView
            android:id="@+id/textview_seasonBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amarante"
            android:text="@string/textview"
            android:paddingTop="8dp"
            android:textColor="@color/violet" />

        <TextView
            android:id="@+id/textview_seasonEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amarante"
            android:text="@string/textview"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/violet" />

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/violet"
            android:fontFamily="@font/amarante"
            android:text="@string/save"
            android:textColor="@color/orange" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
